# swot_navigation_bt

./: CMakeLists.txt  README.md  Readme_navigation.md  Readme_navigation_Old.md  build_output.txt  package.xml
include/swot_navigation/: navigation_monitoring.h  navigation_tree.h  swot_robocup_navigation.h
launch/: amcl.launch  laserscan_multi_merger_swot.launch  move_base.launch  navigation.launch  swot_navigation_monitor.launch  swot_robocup_navigation.launch
param/: costmap_common_params_evocortex.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
param/fast/: local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
param/slow/: global_costmap_params.yaml  global_planner_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
param/unused/: base_local_planner_params.yaml  dwa_local_planner_params_evocortex.yaml  eband_local_planner_params.yaml  nafvn_planner_params.yaml
rviz/: Swot_Default.rviz
scripts/: nav_test.py  teach_ws_positions.py
src/: PoseControllerTransfer  WS_Positions.csv  main.cpp  navigation_monitoring.cpp  navigation_tree.cpp  quaternion_to_euler.cpp  swot_move_to_pose.cpp  swot_robocup_navigation.cpp
src/backup/: swot_robocup_navigation.cpp
src/backup/Fabio/: swot_robocup_navigation.py  swot_ws_aligner.py
src/backup/working/: swot_robocup_navigation.cpp
xml_structure/: swot_navigation.xml
